[package]
name = "rblockchain"
version = "0.1.0"
authors = ["readlnh <readlnh@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rblockchainlib"
path = "src/lib.rs"

[[bin]]
name = "rblockchain"
path = "src/main.rs"

[dependencies]
hex = "0.4.0"
crypto-hash = "0.3.4"
